--- a/style.css
+++ b/style.css
@@ -211,4 +211,29 @@ body {
         }
       }
 
-      
+  /* Tombol Sign In */
+.btn-signin {
+  background-color: #007bff;
+  border: none;
+  padding: 1.5rem 3rem;
+  font-size: 1.25rem;
+  border-radius: 1rem;
+  transition: all 0.3s ease;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: white;
+}
+
+.btn-signin i {
+  margin-right: 8px; /* Spasi antara ikon dan teks */
+  font-size: 1.5rem;
+}
+
+.btn-signin:hover {
+  background-color: #0056b3;
+  transform: scale(1.05);
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+}
+  
